[package]
name = "differentiable-quantum-circuit"
version = "0.1.0"
edition = "2021"

[lib]
name = "differentiable_circuit"
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "0.4.0"
numpy = "0.17.1"
num_cpus = "1.13.1"
rayon = "1.5.3"
pyo3 = { version = "0.17.0", features = ["extension-module", "num-complex"] }

[dev-dependencies]
rand = "0.8.5"
ndarray = "0.15.6"
ndarray_einsum_beta = "0.7.0"